Modifier: Copy to selected does not do anything #87392

Closed
opened 2021-04-11 13:44:18 +02:00 by Wouter Stomp · 22 comments

In #87392#1147959, @Alaska wrote:
I decided to bisect the issue and found the first bad commit to be 9f323e9bf7


System Information
Operating system: macOS-11.2.3-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.2.15

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: ed5507de8a
Worked: 2.92

Short description of error
Using copy to selected on a modifier does not do anything

Exact steps for others to reproduce the error
Default scene
Add second cube
Add a modifier to one of them (e.g. subdivision)
Select both object with the one with the modifier as active
Try to use copy to selected on the modifier; nothing happens
(object -> link -> copy modifiers does work as expected)

Schermopname 2021-04-12 om 20.26.11.mov

> In #87392#1147959, @Alaska wrote: > I decided to bisect the issue and found the first bad commit to be 9f323e9bf7 --- **System Information** Operating system: macOS-11.2.3-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.2.15 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-10 16:36, hash: `ed5507de8a` Worked: 2.92 **Short description of error** Using copy to selected on a modifier does not do anything **Exact steps for others to reproduce the error** Default scene Add second cube Add a modifier to one of them (e.g. subdivision) Select both object with the one with the modifier as active Try to use copy to selected on the modifier; nothing happens (object -> link -> copy modifiers does work as expected) [Schermopname 2021-04-12 om 20.26.11.mov](https://archive.blender.org/developer/F9930890/Schermopname_2021-04-12_om_20.26.11.mov)
Author

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report, Issue is not reproducible for me.

Suggest to select object with no modifier first then select other object where modifier is added. Can you check that again ??

Thanks for the report, Issue is not reproducible for me. Suggest to select object with no modifier first then select other object where modifier is added. Can you check that again ??
Author

Yes that is what I did.

Yes that is what I did.
Member

Added subscriber: @Calra

Added subscriber: @Calra
Member

Hey @blenderrocket would recommend uploading a video for this as well, it will help in better defining the steps or you could update the task description which gives more steps as to how is the modifier copied.
Thanks.

Hey @blenderrocket would recommend uploading a video for this as well, it will help in better defining the steps or you could update the task description which gives more steps as to how is the modifier copied. Thanks.
Author
[Schermopname 2021-04-12 om 20.26.11.mov](https://archive.blender.org/developer/F9930890/Schermopname_2021-04-12_om_20.26.11.mov)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Cannot reproduce this one on Windows 10 master.
@blenderrocket did you try other versions?

Cannot reproduce this one on Windows 10 master. @blenderrocket did you try other versions?
Author

Yes, it works properly in 2.92

Yes, it works properly in 2.92
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can reproduce the problem.
#87392.blend .blend file to reproduce
System Information
Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits
Log:

INFO (wm.operator): /Users/dup/blender-source/blender-git/source/blender/windowmanager/intern/wm_event_system.c:937 wm_operator_reports: bpy.ops.object.modifier_copy_to_selected(modifier="Subdivision")
INFO (wm.operator): /Users/dup/blender-source/blender-git/source/blender/windowmanager/intern/wm_operators.c:790 WM_operator_last_properties_store: storing properties for 'OBJECT_OT_modifier_copy_to_selected'
INFO (ed.undo): /Users/dup/blender-source/blender-git/source/blender/editors/undo/ed_undo.c:119 ED_undo_push: name='Copy Modifier to Selected'
INFO (bke.undosys): /Users/dup/blender-source/blender-git/source/blender/blenkernel/intern/undo_system.c:411 BKE_undosys_stack_limit_steps_and_memory: steps=31, memory_limit=0
INFO (bke.undosys): /Users/dup/blender-source/blender-git/source/blender/blenkernel/intern/undo_system.c:566 BKE_undosys_step_push_with_type: addr=0x7fa60b12f378, name='Copy Modifier to Selected', type='Global Undo'
Undo 2 Steps (*: active, #=applied, M=memfile-active, S=skip)
[    ]   0 {0x7fa609e763c8} type='Global Undo', name='Original'
[* M ]   1 {0x7fa60b12f378} type='Global Undo', name='Copy Modifier to Selected'
I can reproduce the problem. [#87392.blend](https://archive.blender.org/developer/F9937121/T87392.blend) .blend file to reproduce **System Information** Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits **Log:** ``` INFO (wm.operator): /Users/dup/blender-source/blender-git/source/blender/windowmanager/intern/wm_event_system.c:937 wm_operator_reports: bpy.ops.object.modifier_copy_to_selected(modifier="Subdivision") INFO (wm.operator): /Users/dup/blender-source/blender-git/source/blender/windowmanager/intern/wm_operators.c:790 WM_operator_last_properties_store: storing properties for 'OBJECT_OT_modifier_copy_to_selected' INFO (ed.undo): /Users/dup/blender-source/blender-git/source/blender/editors/undo/ed_undo.c:119 ED_undo_push: name='Copy Modifier to Selected' INFO (bke.undosys): /Users/dup/blender-source/blender-git/source/blender/blenkernel/intern/undo_system.c:411 BKE_undosys_stack_limit_steps_and_memory: steps=31, memory_limit=0 INFO (bke.undosys): /Users/dup/blender-source/blender-git/source/blender/blenkernel/intern/undo_system.c:566 BKE_undosys_step_push_with_type: addr=0x7fa60b12f378, name='Copy Modifier to Selected', type='Global Undo' Undo 2 Steps (*: active, #=applied, M=memfile-active, S=skip) [ ] 0 {0x7fa609e763c8} type='Global Undo', name='Original' [* M ] 1 {0x7fa60b12f378} type='Global Undo', name='Copy Modifier to Selected' ```
Contributor

Added subscriber: @ankitm

Added subscriber: @ankitm
Contributor

@ankitm can you try and reproduce the problem when time permits.

@ankitm can you try and reproduce the problem when time permits.
Member

Added subscribers: @HooglyBoogly, @Alaska

Added subscribers: @HooglyBoogly, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I am also able to reproduce on Linux with Blender master while being unable to reproduce in 2.92 release.

I'm marking this as a bug and adding MacOS and Linux platforms to the tags as so far there is no evidence of this issue on Windows.

I also decided to bisect the issue and found the first bad commit to be 9f323e9bf7
CC @HooglyBoogly , mind taking a look?

System Information:
Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67

Blender Version:
Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: e524a6ecf7

I am also able to reproduce on Linux with Blender master while being unable to reproduce in 2.92 release. I'm marking this as a bug and adding MacOS and Linux platforms to the tags as so far there is no evidence of this issue on Windows. I also decided to bisect the issue and found the first bad commit to be 9f323e9bf7 CC @HooglyBoogly , mind taking a look? **System Information:** Operating system: Linux-5.10.0-6-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67 **Blender Version:** Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-04-16 17:44, hash: `e524a6ecf7`
Hans Goudey self-assigned this 2021-04-17 20:25:20 +02:00

This issue was referenced by 6f761c7110

This issue was referenced by 6f761c7110af8f90457f8c13553c5e26d7bc270f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Sorry to have wasted your time everyone with such a dumb mistake. Thanks for the report and the investigations.

Sorry to have wasted your time everyone with such a dumb mistake. Thanks for the report and the investigations.
Member

In #87392#1148847, @HooglyBoogly wrote:
Sorry to have wasted your time everyone with such a dumb mistake. Thanks for the report and the investigations.

It's alright. Thanks for taking the time to fix it for us.

> In #87392#1148847, @HooglyBoogly wrote: > Sorry to have wasted your time everyone with such a dumb mistake. Thanks for the report and the investigations. It's alright. Thanks for taking the time to fix it for us.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87392
No description provided.