Fix T87392: Copy modifier to selected does not do anything

This was caused by a stupid copy & paste error in rB9f323e9bf79fbf4157a.